ctre-sys/include/ctre/phoenix/cci/MotController_CCI.h


	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetMotionProfileStatus(void *handle,
			size_t *topBufferRem, size_t *topBufferCnt, int *btmBufferCnt,
			bool *hasUnderrun, bool *isUnderrun, bool *activePointValid,
			bool *isLast, int *profileSlotSelect, int *outputEnable);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetMotionProfileStatus_2(void *handle,
		    size_t *topBufferRem, size_t *topBufferCnt, int *btmBufferCnt,
			bool *hasUnderrun, bool *isUnderrun, bool *activePointValid,
			bool *isLast, int *profileSlotSelect, int *outputEnable, int *timeDurMs,
			int *profileSlotSelect1);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ClearMotionProfileHasUnderrun(void *handle,
			int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ChangeMotionControlFramePeriod(void *handle,
			int periodMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigMotionProfileTrajectoryPeriod(
			void *handle, int durationMs, int timeoutMs);

    CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetLastError(void *handle);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetFirmwareVersion(void *handle, int *);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_HasResetOccurred(void *handle,bool *);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigSetCustomParam(void *handle, int newValue, int paramIndex, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigGetCustomParam(void *handle, int *readValue, int paramIndex, int timoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigSetParameter(void *handle, int param, double value, uint8_t subValue, int ordinal, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigGetParameter(void *handle, int param, double *value, int ordinal, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigPeakCurrentLimit(void *handle, int amps, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigPeakCurrentDuration(void *handle, int milliseconds, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ConfigContinuousCurrentLimit(void *handle, int amps, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_EnableCurrentLimit(void *handle, bool enable);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_SetLastError(void *handle, int error);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetAnalogIn(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_SetAnalogPosition(void *handle,int newPosition, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetAnalogInRaw(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetAnalogInVel(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetQuadraturePosition(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_SetQuadraturePosition(void *handle,int newPosition, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetQuadratureVelocity(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPulseWidthPosition(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_SetPulseWidthPosition(void *handle,int newPosition, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPulseWidthVelocity(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPulseWidthRiseToFallUs(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPulseWidthRiseToRiseUs(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPinStateQuadA(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPinStateQuadB(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPinStateQuadIdx(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_IsFwdLimitSwitchClosed(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_IsRevLimitSwitchClosed(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetFaults(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetStickyFaults(void *handle, int * param);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_ClearStickyFaults(void *handle, int timeoutMs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_SelectDemandType(void *handle, bool enable);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_SetMPEOutput(void *handle, int MpeOutput);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_EnableHeadingHold(void *handle, bool enable);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetAnalogInAll(void *handle, int * withOv, int * raw, int * vel);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetQuadratureSensor(void *handle, int * pos, int * vel);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetPulseWidthAll(void *handle, int * pos, int * vel, int * riseToRiseUs, int * riseToFallUs);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetQuadPinStates(void *handle, int * quadA, int * quadB, int * quadIdx);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetLimitSwitchState(void *handle, int * isFwdClosed, int * isRevClosed);

	CCIEXPORT ctre::phoenix::ErrorCode c_MotController_GetClosedLoopTarget(void *handle, int * value, int pidIdx);