src/ctre/bindings.rs

extern "C" {
    pub fn c_MotController_GetMotionProfileStatus(
        handle: Handle,
        topBufferRem: *mut ::std::os::raw::c_int,
        topBufferCnt: *mut ::std::os::raw::c_int,
        btmBufferCnt: *mut ::std::os::raw::c_int,
        hasUnderrun: *mut bool,
        isUnderrun: *mut bool,
        activePointValid: *mut bool,
        isLast: *mut bool,
        profileSlotSelect: *mut ::std::os::raw::c_int,
        outputEnable: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetMotionProfileStatus_2(
        handle: Handle,
        topBufferRem: *mut ::std::os::raw::c_int,
        topBufferCnt: *mut ::std::os::raw::c_int,
        btmBufferCnt: *mut ::std::os::raw::c_int,
        hasUnderrun: *mut bool,
        isUnderrun: *mut bool,
        activePointValid: *mut bool,
        isLast: *mut bool,
        profileSlotSelect: *mut ::std::os::raw::c_int,
        outputEnable: *mut SetValueMotionProfile, // XXX: changed from c_int
        timeDurMs: *mut ::std::os::raw::c_int,
        profileSlotSelect1: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ClearMotionProfileHasUnderrun(
        handle: Handle,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ChangeMotionControlFramePeriod(
        handle: Handle,
        periodMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigMotionProfileTrajectoryPeriod(
        handle: Handle,
        durationMs: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetLastError(handle: Handle) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetFirmwareVersion(
        handle: Handle,
        arg1: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_HasResetOccurred(handle: Handle, arg1: *mut bool) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigSetCustomParam(
        handle: Handle,
        newValue: ::std::os::raw::c_int,
        paramIndex: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigGetCustomParam(
        handle: Handle,
        readValue: *mut ::std::os::raw::c_int,
        paramIndex: ::std::os::raw::c_int,
        timoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigSetParameter(
        handle: Handle,
        param: ::std::os::raw::c_int,
        value: f64,
        subValue: ::std::os::raw::c_int,
        ordinal: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigGetParameter(
        handle: Handle,
        param: ::std::os::raw::c_int,
        value: *mut f64,
        ordinal: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigPeakCurrentLimit(
        handle: Handle,
        amps: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigPeakCurrentDuration(
        handle: Handle,
        milliseconds: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigContinuousCurrentLimit(
        handle: Handle,
        amps: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_EnableCurrentLimit(handle: Handle, enable: bool) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetLastError(handle: Handle, error: ::std::os::raw::c_int) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetAnalogIn(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetAnalogPosition(
        handle: Handle,
        newPosition: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetAnalogInRaw(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetAnalogInVel(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetQuadraturePosition(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetQuadraturePosition(
        handle: Handle,
        newPosition: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetQuadratureVelocity(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPulseWidthPosition(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetPulseWidthPosition(
        handle: Handle,
        newPosition: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPulseWidthVelocity(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPulseWidthRiseToFallUs(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPulseWidthRiseToRiseUs(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPinStateQuadA(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPinStateQuadB(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPinStateQuadIdx(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_IsFwdLimitSwitchClosed(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_IsRevLimitSwitchClosed(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetFaults(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetStickyFaults(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ClearStickyFaults(
        handle: Handle,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SelectDemandType(handle: Handle, enable: bool) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetMPEOutput(
        handle: Handle,
        MpeOutput: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_EnableHeadingHold(handle: Handle, enable: bool) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetAnalogInAll(
        handle: Handle,
        withOv: *mut ::std::os::raw::c_int,
        raw: *mut ::std::os::raw::c_int,
        vel: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetQuadratureSensor(
        handle: Handle,
        pos: *mut ::std::os::raw::c_int,
        vel: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetPulseWidthAll(
        handle: Handle,
        pos: *mut ::std::os::raw::c_int,
        vel: *mut ::std::os::raw::c_int,
        riseToRiseUs: *mut ::std::os::raw::c_int,
        riseToFallUs: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetQuadPinStates(
        handle: Handle,
        quadA: *mut ::std::os::raw::c_int,
        quadB: *mut ::std::os::raw::c_int,
        quadIdx: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetLimitSwitchState(
        handle: Handle,
        isFwdClosed: *mut ::std::os::raw::c_int,
        isRevClosed: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetClosedLoopTarget(
        handle: Handle,
        value: *mut ::std::os::raw::c_int,
        pidIdx: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
